--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,1 +1,25 @@
 <h1>Добавить новый курс</h1>
+
+<form action="/add" method="POST">
+  <div class="input-field">
+    <input id="title" type="text" name="title" class="validate" required>
+    <label for="title">Название курса</label>
+    <span class="helper-text" data-error="Введите название курса" data-success="right"></span>
+  </div>
+
+  <div class="input-field">
+    <input id="price" type="text" name="price" class="validate" required>
+    <label for="price">Цена</label>
+    <span class="helper-text" data-error="Введите цену курса" data-success="right"></span>
+  </div>
+
+  <div class="input-field">
+    <input id="img" type="text" name="img" class="validate" required>
+    <label for="img">URL картинки</label>
+    <span class="helper-text" data-error="Введите URl картинки" data-success="right"></span>
+  </div>
+
+  <button class="btn btn=primary">
+    Добавить курс
+  </button>
+</form>
