--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -1,1 +1,23 @@
 <h1>Курсы</h1>
+
+{{#if courseList.length}}
+  <div class="row">
+    {{#each courseList}}
+      <div class="col s6 offset-s3">
+        <div class="card">
+          <div class="card-image">
+            <img src="{{ img }}">
+          </div>
+          <div class="card-content">
+            <span class="card-title">{{ title }}</span>
+            <p class="price">{{ price }}</p>
+          </div>
+          <div class="card-action">
+            <a href="/courses/{{id}}">Открыть курс</a>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+  </div>
+{{else}}
+{{/if}}
