--- a/public/index.css
+++ b/public/index.css
@@ -5,3 +5,23 @@
 .price {
   font-size: 1.5rem;
 }
+
+.course {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.course h1 {
+  margin-bottom: 1.5rem;
+}
+
+.course img {
+  max-width: 600px;
+  height: auto;
+}
+
+.course .price.big {
+  font-size: 2rem;
+}
