--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -13,7 +13,7 @@
             <p class="price">{{ price }}</p>
           </div>
           <div class="card-action">
-            <a href="/courses/{{id}}">Открыть курс</a>
+            <a href="/courses/{{id}}" target="_blank">Открыть курс</a>
           </div>
         </div>
       </div>
