--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -14,6 +14,7 @@
           </div>
           <div class="card-action">
             <a href="/courses/{{id}}" target="_blank">Открыть курс</a>
+            <a href="/courses/{{id}}/edit?allow=true">Редактировать</a>
           </div>
         </div>
       </div>
