--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Home Page</h1>
-  <a href="/about">Go to about page</a>
-</body>
-</html>
+<h1>Добро пожаловать</h1>
+<p>У нас вы найдете только лучшие курсы</p>
