--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -12,9 +12,13 @@
             <span class="card-title">{{ title }}</span>
             <p class="price">{{ price }}</p>
           </div>
-          <div class="card-action">
+          <div class="card-action actions">
             <a href="/courses/{{id}}" target="_blank">Открыть курс</a>
             <a href="/courses/{{id}}/edit?allow=true">Редактировать</a>
+            <form action="/cart/add" method="POST">
+              <input type="hidden" name="id" value="{{ id }}">
+              <button class="btn btn-primary">Купить</button>
+            </form>
           </div>
         </div>
       </div>
