--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -20,6 +20,12 @@
       {{else}}
         <li><a href="/add">Добавить курс</a></li>
       {{/if}}
+
+      {{#if isAdd }}
+        <li class="active"><a href="/cart">Корзина</a></li>
+      {{else}}
+        <li><a href="/cart">Корзина</a></li>
+      {{/if}}
     </ul>
   </div>
 </nav>
