--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,4 +1,4 @@
-<h1> {{ title }}</h1>
+<h4>Редактирование курса: {{ title }}</h4>
 
 <form action="/courses/edit" method="POST">
   <div class="input-field">
@@ -8,7 +8,7 @@
   </div>
 
   <div class="input-field">
-    <input id="price" type="text" name="price" class="validate" required value="{{ course.price }}">
+    <input id="price" type="text" name="price" class="validate" required value="{{ price }}">
     <label for="price">Цена</label>
     <span class="helper-text" data-error="Введите цену курса" data-success="right"></span>
   </div>
