--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,6 +1,6 @@
 <h4>Редактирование курса: {{ title }}</h4>
 
-<form action="/courses/edit" method="POST">
+<form action="/courses/edit" method="POST" class="course-form">
   <div class="input-field">
     <input id="title" type="text" name="title" class="validate" required value="{{ title }}">
     <label for="title">Название курса</label>
@@ -19,9 +19,16 @@
     <span class="helper-text" data-error="Введите URl картинки" data-success="right"></span>
   </div>
 
-  <input type="hidden" name="id" value={{ id }}> 
+  <input type="hidden" name="id" value="{{ id }}"> 
 
-  <button class="btn btn=primary">
+  <button type="submit" class="btn btn-primary">
     Редактировать курс
+  </button>
+</form>
+
+<form action="/courses/remove" method="POST">
+  <input type="hidden" name="id" value="{{id}}">
+  <button class="btn red">
+    Удалить курс
   </button>
 </form>
